--- a/docs/coursereviews/ma2202.md
+++ b/docs/coursereviews/ma2202.md
@@ -11,7 +11,7 @@ has_children: false
 *Semester 2*
 
 # NUSMods Description
-> This course introduces basic concepts in group theory. Major topics: Modular arithmetics. Binary operations. Groups. Sugroups. Group homomorphisms. Examples of groups Symmetric groups and Cayley's theorem. Cyclic groups. Cosets and Theorem of Lagrange. Fermat's Little Theorem and Euler's phi function. Direct products of groups. Normal subgroups. Quotient groups. Isomorphism Theorems. Group actions. Stabilisers and orbits. Examples and applications. Major topics: Divisibility, congruences. Permutations. Binary operations. Groups. Examples of groups including finite abelian groups from the study of integers and finite non-abelian groups constructed from permutations. Subgroups. Cyclic groups. Cosets. Theorem of Lagrange. Fermat’s Little Theorem and Euler's Theorem. Direct products of groups. Normal subgroups. Quotient groups. Isomorphism Theorems
+> This course introduces basic concepts in group theory. Major topics: Modular arithmetics. Binary operations. Groups. Subgroups. Group homomorphisms. Examples of groups Symmetric groups and Cayley's theorem. Cyclic groups. Cosets and Theorem of Lagrange. Fermat's Little Theorem and Euler's phi function. Direct products of groups. Normal subgroups. Quotient groups. Isomorphism Theorems. Group actions. Stabilisers and orbits. Examples and applications. Major topics: Divisibility, congruences. Permutations. Binary operations. Groups. Examples of groups including finite abelian groups from the study of integers and finite non-abelian groups constructed from permutations. Subgroups. Cyclic groups. Cosets. Theorem of Lagrange. Fermat’s Little Theorem and Euler's Theorem. Direct products of groups. Normal subgroups. Quotient groups. Isomorphism Theorems
 
 # Review
 I took this class because I was unsure if I wanted to go down the Algebra route for my math degree. This class is taught by Prof Chin Chee Whye (CCW) and he is infamous for setting extremely hard papers. I think this iteration was not an exception.
